--- a/assignments/HW0/makefile
+++ b/assignments/HW0/makefile
@@ -1,10 +1,14 @@
-ERL_SOURCES := $(wildcard *.erl)
-ERL_OBJECTS := $(ERL_SOURCES:.erl=.beam)
+ERL_SOURCES := $(wildcard src/*.erl)
+BIN_DIR := bin
+ERL_OBJECTS := $(patsubst src/%.erl,$(BIN_DIR)/%.beam,$(ERL_SOURCES))
 
-all: $(ERL_OBJECTS)
+all: $(BIN_DIR) $(ERL_OBJECTS)
 
-%.beam: %.erl
-	erlc $<
+$(BIN_DIR):
+	mkdir -p $(BIN_DIR)
+
+$(BIN_DIR)/%.beam: src/%.erl
+	erlc -o $(BIN_DIR) $<
 
 clean:
-	rm -f *.beam
+	rm -f $(BIN_DIR)/*.beam
